--- a/style.css
+++ b/style.css
@@ -19,23 +19,25 @@
     box-sizing: border-box;
 }
 
-main {
+body {
     /* background: var(--red); */
     background: url(background.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     width: 100vw;
-    height: 100dvh;
+    min-height: 100dvh;
     color: var(--yellow);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-main #container {
+
+
+main {
     width: min(100%, 375px);
-    height: min(100%, 812px);
+    min-height: 812px;
     /* border: 1px solid white; */
     display: grid;
     grid-template-columns: auto;
